# rixaplugin

./: .gitignore  pyproject.toml  readme.md
docs/source/: auth_system.md  conf.py  index.md  issues.md  plugin_tutorial.md
docs/source/modules/: rixaplugin.data_structures.rst  rixaplugin.default_plugins.rst  rixaplugin.internal.rst  rixaplugin.public.rst  rixaplugin.pylot.rst  rixaplugin.remote.rst  rixaplugin.rst
examples/: client.ipynb  data_async.py  readme.md  server.ipynb
examples/log/: main.txt
examples/tutorial/: 2_1_run_server.py
pylot/: python_parsing.py
rixaplugin/: __init__.py  api.py  async_api.py  decorators.py  enums.py  executor.py  memory.py  networking.py  proxy_builder.py  python_parsing.py  rixa_exceptions.py  rixalogger.py  rixalogger_legacy.py  settings.py  utils.py  variables.py
rixaplugin/data_structures/: enums.py  rixa_exceptions.py  variables.py
rixaplugin/default_plugins/: catbot.py  data_explorer.py  knowledge_db.py  knowledge_db_creation.py  knowledge_db_legacy.py  math.py  openai_server.py  websearch.py  xai.py
rixaplugin/examples/: knowledge_base.py  math.py
rixaplugin/internal/: api.py  cli.py  executor.py  memory.py  networking.py  rixalogger.py  utils.py
rixaplugin/public/: __init__.py
rixaplugin/pylot/: proxy_builder.py  python_parsing.py
rixaplugin/remote/: __init__.py
rixaplugin/test/: introspection.py  sync_test_plugin.py  test_api.py
tutorial/: 1_intro.py  2_2_run_client.py
