[project]
name = "PyLoT"
version = "0.1.0"
authors = [
  { name="Finn Schwall", email="finn.schwall@isob.fraunhofer.de" },
]
description = "Python Language Toolkit"
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: Apache 2",
    "Operating System :: OS Independent",
]

dependencies = [
]

[project.urls]
"Homepage" = "https://github.com/finnschwall/PyLoT"

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"
