[project]
name = "rixaplugin"
version = "0.0.1"
authors = [
  { name="Finn Schwall", email="finn.schwall@isob.fraunhofer.de" },
]
description = "Plugin suite for RIXA"
readme = "README.md"
#requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: Apache 2",
    "Operating System :: OS Independent",
]

dependencies = [
    "docstring_parser",
    "click",
    "pyzmq",
    "msgpack"
]
[project.scripts]
rixaplugin = "rixaplugin.internal.cli:main"


#[project.urls]
#"Homepage" = "https://github.com/finnschwall/PyLoT"
[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"
